# codex-pong-video

./: AGENTS.md  CLONE_GUIDE.md  CODING_GUIDE.md  DOC_TEMPLATES.md  PORTFOLIO_TRACK.md  PRODUCT_SPEC.md  README.md  STACK_DESIGN.md  VERSIONING.md  docker-compose.yml
.github/workflows/: backend-tests.yml
.notuse/: VERSION_PROMPTS.md
backend/: Dockerfile  build.gradle
design/backend/: v0.1.0-core-skeleton-and-health.md  v0.2.0-auth-and-profile.md  v0.3.0-game-and-matchmaking.md  v0.4.0-ranking-system.md
design/contracts/: v0.5.0-replay-export-contract.md  v0.6.0-portfolio-media-contract.md
design/frontend/: v0.1.0-core-layout-and-routing.md  v0.2.0-auth-and-profile-ui.md  v0.3.0-game-lobby-and-play-ui.md  v0.4.0-ranking-and-leaderboard-ui.md  v0.6.0-perf-audit.md
design/infra/: v0.1.0-local-dev-stack.md
design/realtime/: v0.1.0-basic-websocket-wiring.md  v0.3.0-game-loop-and-events.md  v0.4.0-ranking-aware-events.md
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  constants.ts  index.css  main.tsx
frontend/src/hooks/: useAudioCue.ts  useEchoSocket.ts  useGameSocket.ts  usePerfAudit.ts  useQuickMatch.ts  useRenderer.ts
frontend/src/pages/: GamePage.tsx  LandingPage.tsx  LobbyPage.tsx  (+5 more)
infra/nginx/: Dockerfile
scripts/: demo_v0_6.sh
worker/: Dockerfile  package-lock.json  package.json  tsconfig.json
worker/native/: CMakeLists.txt
worker/native/src/: main.cpp
worker/src/: encoderConfig.test.ts  encoderConfig.ts  errorCodes.ts  index.ts  nativeBridge.ts  validation.test.ts  validation.ts
(+85 files in other folders)
